[package]
name = "syntax-indexer-backend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
carbon-core = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
carbon-rpc-block-subscribe-datasource = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
carbon-pumpfun-decoder = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
carbon-helius-atlas-ws-datasource = { workspace = true }
helius = { workspace = true }
carbon-rpc-program-subscribe-datasource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
carbon-pump-swap-decoder = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
env_logger = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
spl-associated-token-account-client = { workspace = true }